<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/Switch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:paddingHorizontal="@dimen/margin_horizontal"
        android:text="@string/black_theme"
        app:switchTextAppearance="@style/YSRegular16" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        style="@style/Item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/share"
        app:icon="@drawable/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_support"
        style="@style/Item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/support"
        app:icon="@drawable/support" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_agreement"
        style="@style/Item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/user_agreement"
        app:icon="@drawable/arrow_forward" />

</LinearLayout>