<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginBottom="@dimen/margin_vertical"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/YSMedium22"
        app:titleTextColor="@color/yp_white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_media_library"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_weight="1"
        android:text="@string/media_library"
        app:icon="@drawable/library" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/settings" />
</LinearLayout>